--- a/report/src/experiments-cpuschedos.tex
+++ b/report/src/experiments-cpuschedos.tex
@@ -138,23 +138,44 @@ The way back need also to be done.
 
 \paragraph{Results}
 
-\begin{tabular}{| l | l | l | l | l |}
-\hline
-Operation & Hardware cose & Software cost & Prediction & Measured \\
-\hline
-\end{tabular}
+
+
+
+
+
+
+
+
+
+
 \paragraph{Accuracy of Estimates}
 \paragraph{Success of Methodology}
 
+
+
 \subsubsection{Task creation time}
 \paragraph{Methodology}
+We measured the time to create process and thread seperately. After that, we compared them to each other to verify our measurement. When a new process is created, the page tables and stack frame are copied. While for creating a kernel thread, less information are required to get copied because of the fact that a lot of the resource in thread are shared with the main thread. 
+
+Methodology:
+We used the system call fork() for creating a new process and record the number of cycles from before the fork() is called to the point waitid() get back from the new process. And for the newly created process, we called _exit() to immediated exit after creation.
+Similarly, we used the solaris implementation, which is thr_create() for cloning thread. At first we used pthread_create() fuction for thread creation operation. We replaced it with thr_create() later because it is not meant for Solaris system, which is not as accurate when we are doing the measurement of the whole Solaris OS. Right after the creation of the thread, we used thr_join() to wait for the termination of itself.
+
+
+
+
+
+
 \paragraph{Predictions}
 \paragraph{Results}
 
 \begin{tabular}{| l | l | l | l | l |}
 \hline
-Operation & Hardware cose & Software cost & Prediction & Measured \\
+Operation & Hardware cost & Software cost & Prediction & Measured average & Measured first creation \\
 \hline
+ \hline
+process creation (fork) & 10  & 0  & 10  & 1198519.65 cycles & 2257852 cycles\\ \hline
+thread creation (thr_create) & 11  & 0  & 11  &  157433.27 cycles & 2273593 cycles \\ \hline
 \end{tabular}
 \paragraph{Accuracy of Estimates}
 \paragraph{Success of Methodology}
