--- a/report/src/experiments-cpuschedos.tex
+++ b/report/src/experiments-cpuschedos.tex
@@ -159,9 +159,10 @@ excepted.
 
 \paragraph{Accuracy of Estimates}
 We didn't predicted that the first run would be that slow.
-The comming 
+The following
 
 \paragraph{Success of Methodology}
+
 
 \subsubsection{Task creation time}
 \paragraph{Methodology}
