--- a/report/src/experiments-cpuschedos.tex
+++ b/report/src/experiments-cpuschedos.tex
@@ -190,7 +190,7 @@ As mentioned earlier, the thread has less data to copy than process do. Meanwhil
 \begin{center}
 \begin{tabular}{| l | l | l | l | l | l |}
 \hline
-Operation & Hardware cost & Software cost & Prediction & Measured average & Measured first creation \\
+Operation & H/W cost & S/W cost & Prediction & Measured average & Measured first creation \\
 \hline
 fork() process 		& 20  & 10000  	& 10000 & 1198519.65 cycles & 2257852 cycles\\ \hline
 thr\_create() thread 	& 20  & 8000	& 8000  &  157433.27 cycles & 2273593 cycles \\ \hline
@@ -216,7 +216,7 @@ The fact thread creation without caching is taking way longer time than the one 
 Operation & Hardware cose & Software cost & Prediction & Measured \\
 \hline
 \end{tabular}
-\end{end}
+\end{center}
 
 \paragraph{Accuracy of Estimates}
 \paragraph{Success of Methodology}
