--- a/report/src/machine-description.tex
+++ b/report/src/machine-description.tex
@@ -30,6 +30,7 @@ allow a transfer rate up to 20Gb/s.
 
 \subsection{Ram}
 The host system is equipped with 16GB of DDR3.
+The memory is running at 1333 Mhz with a CAS of 9.
 The memory controller is directly integrated in the CPU, according to the
 specification of the processor, the memory bus frequence is 1333Mhz which allow a bandwidth up
 to 21 GB/s. \cite{intel-i5-2500}
@@ -94,8 +95,8 @@ SunOS solaris1 5.11 11.0 i86pc i386 i86pc
 \end{verbatim}
 Content of the /etc/release file :
 \begin{verbatim}
-                           Oracle Solaris 11 11/11 X86\\
-  Copyright (c) 1983, 2011, Oracle and/or its affiliates.  All rights reserved.\\
+                           Oracle Solaris 11 11/11 X86
+  Copyright (c) 1983, 2011, Oracle and/or its affiliates.  All rights reserved.
                             Assembled 18 October 2011
 \end{verbatim}
 
