--- a/report/src/experiments-network.tex
+++ b/report/src/experiments-network.tex
@@ -9,7 +9,7 @@ Evaluate for the TCP protocol. For each quantity, compare both remote and loopba
 \paragraph{Methodology}
 \paragraph{Predictions}
 \paragraph{Results}
-
+\begin{table}[h]
 \begin{center}
 \begin{tabular}{| l | l | l | l | l |}
 \hline
@@ -17,8 +17,10 @@ Operation & Hardware cose & Software cost & Prediction & Measured \\
 \hline
 \end{tabular}
 \end{center}
+\caption{Round trip time\label{tab:rtt}}
+\end{table}
 
-\paragraph{Accuracy of Estimates}
+As seen in table \ref{tab:rtt}
 \paragraph{Success of Methodology}
 
  Compare with the time to perform a ping (ICMP requests are handled at kernel level).
@@ -35,7 +37,7 @@ Operation & Hardware cose & Software cost & Prediction & Measured \\
 \paragraph{Methodology}
 \paragraph{Predictions}
 \paragraph{Results}
-
+\begin{table}[h]
 \begin{center}
 \begin{tabular}{| l | l | l | l | l |}
 \hline
@@ -43,8 +45,10 @@ Operation & Hardware cose & Software cost & Prediction & Measured \\
 \hline
 \end{tabular}
 \end{center}
+\caption{Peak bandwidth\label{tab:peak-bandwidth}}
+\end{table}
 
-\paragraph{Accuracy of Estimates}
+As seen in table \ref{tab:Peak bandwidth}
 \paragraph{Success of Methodology}
 
 
@@ -55,7 +59,7 @@ Operation & Hardware cose & Software cost & Prediction & Measured \\
 \paragraph{Methodology}
 \paragraph{Predictions}
 \paragraph{Results}
-
+\begin{table} [h]
 \begin{center}
 \begin{tabular}{| l | l | l | l | l |}
 \hline
@@ -63,6 +67,9 @@ Operation & Hardware cose & Software cost & Prediction & Measured \\
 \hline
 \end{tabular}
 \end{center}
+\caption{Connection overhead\label{tab:connection-overhead}}
+\end{table}
 
-\paragraph{Accuracy of Estimates}
+As seen in table \ref{tab:connection-overhead}
+
 \paragraph{Success of Methodology}
