--- a/report/src/experiments-network.tex
+++ b/report/src/experiments-network.tex
@@ -6,6 +6,10 @@
 Evaluate for the TCP protocol. For each quantity, compare both remote and loopback interfaces. Comparing the remote and loopback results, what can you deduce about baseline network performance and the overhead of OS software? For both round trip time and bandwidth, how close to ideal hardware performance do you achieve? In describing your methodology for the remote case, either provide a machine description for the second machine (as above), or use two identical machines.
 //NOTE: above is the guide line
 
+\begin{verbatim}
+ping -n -s 127.0.0.1 56 100 
+\end{verbatim}
+
 \paragraph{Methodology}
 \paragraph{Predictions}
 \paragraph{Results}
