Fix context switching table

--- a/report/src/experiments-cpuschedos.tex
+++ b/report/src/experiments-cpuschedos.tex
@@ -220,10 +220,14 @@ The fact thread creation without caching is taking way longer time than the one 
 \begin{center}
 \begin{tabular}{| l | l | l | l | l |}
 \hline
-Operation 				& Hardware cost 	& Software cost 	& Prediction 	& Measured \\ \hline
-process context switch 	& 				&				&			& 2010805.721 cycles \\hline
-thread context switch 	& 				&				&			& 1895295.586 cycles \\hline
-pipe overhead			& 				&				&			& 45275.283 cycles \\hline
+Operation 				& Hardware cost 	& Software cost 	& Prediction 	& Measured \\
+\hline
+process context switch 	& 				&				&			& 2010805.721 cycles \\
+\hline
+thread context switch 	& 				&				&			& 1895295.586 cycles \\ 
+\hline
+pipe overhead			& 				&				&			& 45275.283 cycles \\ 
+\hline
 \hline
 \end{tabular}
 \end{center}
